# WiScope

./: .gitignore  CMakeLists.txt  README.md
asm/arm64/: check_root.s
asm/x86_64/: check_root.asm
include/: check_root.h
include/core/: Executor.hpp  Sniffer.hpp
include/ui/: TerminalUI.hpp
scripts/: install_linux.sh  install_mac.sh
src/: main.cpp
src/core/: Executor.cpp  Sniffer.cpp
src/ui/: TerminalUI.cpp
